# rive-tizen

./: .gitmodules  LICENSE  README.md  build.sh  meson.build  meson_options.txt
.github/workflows/: add_to_project.yml  build.yml
example/: animation_mixing.cpp  meson.build  rive_tizen_controller.cpp  rive_viewer.cpp  runtime_property_change.cpp  shapes.riv  text_component_position_mapping.cpp  user_interaction_animation_speed.cpp  user_interaction_follow_cursor.cpp  user_interaction_rollinout.cpp  user_interaction_touch.cpp
example/resource/: beach_icon.riv  blend_juice_solid.riv  bone_notebook.riv  clippath_draworder_calendar_icon.riv  gradation_space_reload.riv  gradation_weather_icon.riv  gradienttest.riv  headphones.riv  knight_nobackground.riv  phone_drop.riv  poison_loader.riv  shapes.riv  trimpath_notification_icon.riv
example/resources/: barrier.riv  beach_icon.riv  bear.riv  blink_simple_2.riv  buggy.riv  calendar_icon2.riv  cute-cake.riv  documents3.riv  dory.riv  flag.riv  flame-and-spark.riv  flux_capacitor2.riv  handshake.riv  headphones.riv  heart.riv  hig_five_icon.riv  illustration-1.riv  iron_giant2.riv  juice063.riv  knight063.riv  laces.riv  landing.riv  laptop_slide.riv  love_note_4.riv  mail.riv  marine_corps_running.riv  marker.riv  marty_v6.riv  mr-help.riv  neon_car.riv  notebook_demo2.riv  notification_icon_3.riv  phone_drop.riv  poison_loader.riv  portable-table.riv  publish-icon.riv  question_icon.riv  rocket_reload.riv  rudolph.riv  runtime_color_change.riv  (+11 more)
inc/: meson.build  rive_tizen.hpp
packaging/: rive-tizen.spec
script/: install.sh  rive_api_export.diff  tizen_build.diff
src/: meson.build  rive_tizen.cpp
src/renderer/: meson.build  tvg_renderer.cpp  tvg_renderer.hpp
src/renderer/include/: thorvg_renderer.hpp
src/renderer/src/: thorvg_renderer.cpp
test/: meson.build  test_controller.cpp
